complete derivation, updated README, added PDF

--- a/gt_sun/gt_sun_refs.bib
+++ b/gt_sun/gt_sun_refs.bib
@@ -13,7 +13,7 @@
 }
 @article{zavrel_antenna_physics,
   title={Antenna Physics: An Introduction},
-  author={Kraus, John D},
+  author={Zavrel, Robert J.},
   journal={ARRL},
   year={2016}
 }
