--- a/gt_sun/gt_sun.tex
+++ b/gt_sun/gt_sun.tex
@@ -6,15 +6,15 @@
 The power received by pointing an antenna at the sun $P_{sun}$, and a quiet area of sky $P_{quiet}$ is used commonly used to estimate receiver $G/T$ \cite{flagg2006_det_gt}.  The power delivered to the receiver for each measurement is:
 \begin{equation}
 \begin{split}
-P_{sun} &= (T_{sun}+T)G \\
-P_{quiet} &= TG 
+P_{sun} &= (kT_{sun}B+kTB)G \\
+P_{quiet} &= kTBG 
 \end{split}
 \end{equation}
-where $G$ is the antenna gain and $T$ is the system noise temperature; the sum of all noise temperature sources such as feedline losses, LNA, ground spillover, and sky noise. The $Y$ factor is the ratio of the two  measurements:
+where $G$ is the antenna gain referenced to an isotropic antenna and $T$ is the system noise temperature; the sum of all noise temperature sources such as feedline losses, LNA, ground spillover, and sky noise, and $T_{sun}$ is the noise temperature of the sun at the time of the measurement. The $Y$ factor is the ratio of the two  measurements:
 \begin{equation}
 \begin{split}
 Y &= \frac{P_{sun}}{P_{quiet}} \\
-  &= \frac{(T_{sun}+T)G}{TG} \\
+  &= \frac{(T_{sun}+T)kBG}{TkBG} \\
   &= \frac{T_{sun}+T}{T} 
 \end{split}
 \end{equation}
@@ -22,8 +22,33 @@ Solving for $T$ we have:
 \begin{equation} \label{eq:T}
 T = \frac{T_{sun}}{Y-1}
 \end{equation}
-
-Expanding (\ref{eq:T})
+The power received from the sun can also be expressed in terms of the measured flux density (available for a given day from government observatories):
+\begin{equation} \label{eq:Psun}
+P_{sun} = \frac{FA_e}{2}
+\end{equation}
+where $F$ is the power flux density of the noise from the sun in $W/m^2/Hz$, and $A_e$ is the effective area of the antenna. The power from the sun has random polarization, therefore only half of the power is delivered to the receiver as the relationship to effective area $A_e$ assumes matched polarization \cite[p 778]{kraus1988antennas}. The effective area of an antenna is given by \cite[Eq 2.3]{zavrel_antenna_physics}:
+\begin{equation}
+\begin{split} \label{eq:Ea}
+A_e = A_e^{iso}G \\
+A_e = \frac{\lambda^2}{4\pi}G
+\end{split}
+\end{equation}
+where $A_e^{iso}$ is the effective area of an isotropic antenna and $G$ is the antenna gain referenced to an isotropic antenna in dBi. Substituting (\ref{eq:Ea}) into (\ref{eq:Psun}):
+\begin{equation}
+P_{sun} = \frac{F\lambda^2G}{8\pi}
+\end{equation}
+Using the relationship $P=kTB$, and noting $B=1$ as F is defined in a 1 Hz bandwidth:
+\begin{equation} \label{eq:Tsun}
+T_{sun} = \frac{P_{sun}}{k} = \frac{F\lambda^2G}{8\pi k}
+\end{equation}
+Substituting (\ref{eq:Tsun}) into (\ref{eq:T}):
+\begin{equation}
+T = \frac{F\lambda^2G}{8\pi k(Y-1)}
+\end{equation}
+Re-arranging we obtain the commonly used expression for estimating $G/T$ from $P_{sun}$ and $P_{quiet}$:
+\begin{equation}
+G/T = \frac{8\pi k(P_{sun}/P_{quiet}-1)}{F\lambda^2}
+\end{equation}
 
 \bibliographystyle{plain}
 \bibliography{gt_sun_refs}
