--- a/gt_sun/gt_sun_refs.bib
+++ b/gt_sun/gt_sun_refs.bib
@@ -1,9 +1,8 @@
 @misc{flagg2006_det_gt,
   author = {Richard Flagg, AH6NM},
   title = {{Determination of G/T}},
-  howpublished = "\url{http://http://www.setileague.org/articles/g-t.htm}",
   year = {2006}, 
-  note = "[Online; accessed 06-April-2022]"
+  note = {\url{http://www.setileague.org/articles/g-t.htm}}
 }
 @article{kraus1988antennas,
   title={Antennas McGraw-Hill},
