--- a/gt_sun/gt_sun.tex
+++ b/gt_sun/gt_sun.tex
@@ -49,7 +49,7 @@ Re-arranging we obtain the commonly used expression for estimating $G/T$ from $P
 \begin{equation}
 G/T = \frac{8\pi k(P_{sun}/P_{quiet}-1)}{F\lambda^2}
 \end{equation}
-Note that $P_{sun}$ and $P_{quiet}$ are in Watts (not dBW or dBm), and $G/T$ is a linear power ratio in Watts/K, commonly converted to dB and expressed as dB/K.
+Note that $P_{sun}$ and $P_{quiet}$ are linear power (e.g. W or mW, not dBW or dBm), and $G/T$ is a linear power ratio with units $K^{-1}$, commonly converted to dB and expressed as $dB/K$.
 \bibliographystyle{plain}
 \bibliography{gt_sun_refs}
 \end{document}
