--- a/gt_sun/gt_sun_refs.bib
+++ b/gt_sun/gt_sun_refs.bib
@@ -1,13 +1,13 @@
 @misc{flagg2006_det_gt,
-  author = {Richard Flagg, AH6NM},
+  author = {{Richard Flagg, AH6NM}},
   title = {{Determination of G/T}},
   year = {2006}, 
   note = {\url{http://www.setileague.org/articles/g-t.htm}}
 }
 @article{kraus1988antennas,
-  title={Antennas McGraw-Hill},
+  title={{Antennas}},
   author={Kraus, John D},
-  journal={New York},
+  journal={McGraw-Hill},
   year={1988}
 }
 @article{zavrel_antenna_physics,
