--- a/gt_sun/gt_sun.tex
+++ b/gt_sun/gt_sun.tex
@@ -4,8 +4,10 @@
 \usepackage{tikz}
 \begin{document}
 
-\begin{center}
+\title{Estimating $G/T$ from Sun Noise}
+\maketitle
 
+\begin{center}
 \begin{tikzpicture}
 \draw (1,2) -- (2,2);
 \draw (2.5,0.75) -- (2.5,1.5);
@@ -26,7 +28,7 @@
 \end{tikzpicture}
 \end{center}
 
-The power received by pointing an antenna at the sun $P_{sun}$ and a quiet area of sky $P_{quiet}$ is used commonly used to estimate receiver $G/T$ \cite{flagg2006_det_gt}.  The power in Watts delivered to the receiver Rx for each measurement is:
+The power received by pointing an antenna at the sun $P_{sun}$ and a quiet area of sky $P_{quiet}$ is commonly used to estimate receiver $G/T$ \cite{flagg2006_det_gt}.  The power in Watts delivered to the receiver Rx for each measurement is:
 \begin{equation}
 \begin{split}
 P_{sun} &= (kT_{sun}B+kTB)G \\
